--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -4,16 +4,16 @@
       "Input": "log20220715.txt",
       "Guid": "",
       "Request": "GetZIP"
-    },
-    {
-      "Input": "log20220715_001.txt",
-      "Guid": "",
-      "Request": "GetZIP"
-    },
-    {
-      "Input": "log20220715_002.txt",
-      "Guid": "",
-      "Request": "GetZIP"
     }
+    //{
+    //  "Input": "log20220715_001.txt",
+    //  "Guid": "",
+    //  "Request": "GetZIP"
+    //},
+    //{
+    //  "Input": "log20220715_002.txt",
+    //  "Guid": "",
+    //  "Request": "GetZIP"
+    //}
   ]
 }
