Added GetVerifyAmount to list

--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -3,7 +3,7 @@
     {
       "Input": "log20220715.txt",
       "Guid": "",
-      "Request": "GetZIP"
+      "Request": "GetVerifyAmount"
     }
     //{
     //  "Input": "log20220715_001.txt",
