--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -1,9 +1,14 @@
 {
   "FileGroup": [
     {
-      "Input": "log20220715.txt",
+      "Input": "log20220915.txt",
       "Guid": "",
-      "Request": "GetVerifyAmount"
+      "Request": "GetVerifyAmount",
+      "FilterOut":
+        {
+          "FlightWeightWorker": true,
+          "DeviceUIListener": true
+        }
     }
     //{
     //  "Input": "log20220715_001.txt",
