--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -3,7 +3,7 @@
     {
       "Input": "log20220915.txt",
       "Guid": "",
-      "Request": "GetVerifyAmount",
+      "Request": "GetPayment",
       "FilterOut":
         {
           "FlightWeightWorker": true,
