--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -1,8 +1,17 @@
 {
   "FileGroup": [
     {
-      "Input": "log20220915.txt",
+      "Input": "log20221003.txt",
       "Guid": "",
+      // "Request": options
+                    // "GetPayment"
+                    // "GetPayment"
+                    // "GetCreditOrDebit"
+                    // "GetPIN"
+                    // "GetZIP"
+                    // "GetVerifyAmount"
+                    // "RemoveCard"
+                    // "DeviceUI"      
       "Request": "GetPayment",
       "FilterOut":
         {
