Out directory for each FileGroup

--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -1,23 +1,23 @@
 {
   "FileGroup": [
     {
-      "Input": "log20221003.txt",
+      "Input": "log20230731.txt",
       "Guid": "",
       // "Request": options
-                    // "GetPayment"
-                    // "GetPayment"
-                    // "GetCreditOrDebit"
-                    // "GetPIN"
-                    // "GetZIP"
-                    // "GetVerifyAmount"
-                    // "RemoveCard"
-                    // "DeviceUI"      
-      "Request": "GetPayment",
-      "FilterOut":
-        {
-          "FlightWeightWorker": true,
-          "DeviceUIListener": true
-        }
+      // "GetPayment"
+      // "GetPayment"
+      // "GetCreditOrDebit"
+      // "GetPIN"
+      // "GetZIP"
+      // "GetVerifyAmount"
+      // "RemoveCard"
+      // "DeviceUI"
+      // "ADAMode"
+      "Request": "ADAMode",
+      "FilterOut": {
+        "FlightWeightWorker": true,
+        "DeviceUIListener": true
+      }
     }
     //{
     //  "Input": "log20220715_001.txt",
