--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -1,7 +1,7 @@
 {
   "FileGroup": [
     {
-      "Input": "log20230731.txt",
+      "Input": "log20231010.txt",
       "Guid": "",
       // "Request": options
       // "GetPayment"
@@ -13,7 +13,8 @@
       // "RemoveCard"
       // "DeviceUI"
       // "ADAMode"
-      "Request": "ADAMode",
+      //"Request": "ADAMode",
+      "MessageId": "mRP9r+DMxKTnt+6n+6",
       "FilterOut": {
         "FlightWeightWorker": true,
         "DeviceUIListener": true
