Added GUID transaction search

--- a/TRANSACTION_SEARCH/appsettings.json
+++ b/TRANSACTION_SEARCH/appsettings.json
@@ -1,8 +1,10 @@
 {
   "FileGroup": [
     {
-      "Input": "log20231010.txt",
+      "Input": "SN 806724688 log20231128 - A51114.txt",
       "Guid": "",
+      // options: 0 = requestid, 1 = guid
+      "PaymentSegment": 1,
       // "Request": options
       // "GetPayment"
       // "GetPayment"
@@ -13,11 +15,11 @@
       // "RemoveCard"
       // "DeviceUI"
       // "ADAMode"
-      //"Request": "ADAMode",
-      "MessageId": "mRP9r+DMxKTnt+6n+6",
+      "Request": "GetPayment",
+      //"MessageId": "5gm1nn9Vlqmn",
       "FilterOut": {
         "FlightWeightWorker": true,
-        "DeviceUIListener": true
+        "DeviceUIListener": false
       }
     }
     //{
